fix: make spacing more consistent

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -55,8 +55,6 @@ table {
 }
 .container .content {
   font-family: "Inter", sans-serif;
-  background-color: #F9F8F8;
-  margin-top: 50px;
   width: 100%;
 }
 .container .content .quote {
@@ -649,7 +647,6 @@ header a {
   display: grid;
   grid-template-columns: 100%;
   grid-auto-rows: 1fr;
-  margin-top: 40px;
   justify-content: center;
   gap: 8px;
 }
@@ -746,5 +743,10 @@ header a {
 @media (min-width: 700px) {
   .about-container .swiper-slide img, .about-container video {
     height: 600px;
+  }
+}
+@media (min-width: 1600px) {
+  .about-container {
+    margin-top: 120px;
   }
 }
