--- a/src/styles/scss/_app.scss
+++ b/src/styles/scss/_app.scss
@@ -4,8 +4,7 @@
 
   .content {
     font-family: $main-font-family;
-    background-color: #F9F8F8;
-    margin-top: 50px;
+    // margin-top: 50px;
     width: 100%;
 
     .quote {
