--- a/src/styles/scss/components/_about.scss
+++ b/src/styles/scss/components/_about.scss
@@ -53,10 +53,8 @@
    }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1600px) {
   .about-container {
-    .swiper-slide img, video {
-
-    }
+    margin-top: $spacing-120;
   }
 }
