--- a/src/styles/scss/components/_projectsgrid.scss
+++ b/src/styles/scss/components/_projectsgrid.scss
@@ -7,7 +7,6 @@
   display: grid;
   grid-template-columns: 100%;
   grid-auto-rows: 1fr;
-  margin-top: $spacing-40;
   justify-content: center;
   gap: 8px;
 
